--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -67,13 +67,11 @@
 
           <nav class="s-header__nav">
             <ul class="s-header__menu-links">
-              <li class="current">
-                <a href="#intro" class="smoothscroll">Intro</a>
-              </li>
-              <li><a href="#about" class="smoothscroll">About</a></li>
-              <li><a href="#services" class="smoothscroll">Services</a></li>
-              <li><a href="#folio" class="smoothscroll">Work</a></li>
-              <li><a href="#footer" class="smoothscroll">Contact</a></li>
+                {% for section in sections %}
+                    <li {% if forloop.first %}class="current"{% endif %}>
+                        <a href="#{{ section.name|lower }}" class="smoothscroll">{{ section.label }}</a>
+                    </li>
+                {% endfor %}
             </ul>
             <!-- s-header__menu-links -->
 
@@ -142,219 +140,43 @@
         </section>
         <!-- end s-intro -->
 
-        <!-- about            ----------------------------------------------- -->
-        <section id="about" class="s-about target-section">
-            {% for section in sections %}
-                {% if section.name == 'about' %}
-                    {{ section.content|safe }}
+        {% for section in sections %}
+            {% if section.name != 'intro' and section.name != 'footer' %}
+                {% if section.name == 'services' %}
+                    <!-- services -->
+                    <section id="services" class="s-services target-section">
+                        <!-- Dynamic section header from CMS -->
+                        {{ section.content|safe }}
+
+                        <div class="row services-list list-block block-lg-one-half block-tab-whole">
+                            {% for service in section.services.all %}
+                            <div class="column list-block__item">
+                                <div class="list-block__title">
+                                    <div class="list-block__icon">
+                                        {{ service.icon|safe }}
+                                    </div>
+                                    <h3 class="h5">{{ service.name }}</h3>
+                                </div>
+                                <div class="list-block__text">
+                                    {{ service.description|safe }}
+                                </div>
+                            </div>
+                            <!-- end list-block__item -->
+                            {% endfor %}
+                        </div>
+                        <!-- end process-list -->
+                    </section>
+                    <!-- end s-services -->
+                {% else %}
+                    <!-- standard section -->
+                    <section id="{{ section.name }}" class="s-{{ section.name }} target-section">
+                        {{ section.content|safe }}
+                    </section>
+                    <!-- end s-{{ section.name }} -->
                 {% endif %}
-            {% endfor %}
-        </section>
-        <!-- end s-about -->
+            {% endif %}
+        {% endfor %}
 
-        <!-- services            ----------------------------------------------- -->
-        <section id="services" class="s-services target-section">
-          <div class="row section-header" data-num="2">
-            <h3 class="column lg-12 section-header__pretitle text-pretitle">
-              What We Do
-            </h3>
-            <div class="column lg-6 stack-on-1100 section-header__primary">
-              <h2 class="title text-display-1">
-                Our services are tailored to make your business grow and stand
-                out.
-              </h2>
-            </div>
-            <div class="column lg-6 stack-on-1100 section-header__secondary">
-              <p class="desc">
-                Quia iusto totam facilis ut atque quidem quis maiores iure.
-                Facilis mollitia enim illo sed et totam commodi. Velit a
-                recusandae sequi consequatur est dolorum eaque.
-              </p>
-            </div>
-          </div>
-          <!-- end section-header -->
-
-          <div
-            class="row services-list list-block block-lg-one-half block-tab-whole"
-          >
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <div class="list-block__icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-                  >
-                    <path
-                      d="m6.516 14.323-1.49 6.452a.998.998 0 0 0 1.529 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082a1 1 0 0 0-.59-1.74l-5.701-.454-2.467-5.461a.998.998 0 0 0-1.822 0L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.214 4.107zm2.853-4.326a.998.998 0 0 0 .832-.586L12 5.43l1.799 3.981a.998.998 0 0 0 .832.586l3.972.315-3.271 2.944c-.284.256-.397.65-.293 1.018l1.253 4.385-3.736-2.491a.995.995 0 0 0-1.109 0l-3.904 2.603 1.05-4.546a1 1 0 0 0-.276-.94l-3.038-2.962 4.09-.326z"
-                    ></path>
-                  </svg>
-                </div>
-                <h3 class="h5">Brand Identity</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Quibusdam quis autem voluptatibus earum vel ex error ea magni.
-                  Rerum quam quos. Aut asperiores sit mollitia. Rem neque et
-                  voluptatem eos quia sed eligendi et. Eaque velit eligendi ut
-                  magnam. Cumque ducimus laborum doloribus facere maxime vel
-                  earum quidem enim suscipit.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <div class="list-block__icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-                  >
-                    <path
-                      d="m21.406 6.086-9-4a1.001 1.001 0 0 0-.813 0l-9 4c-.02.009-.034.024-.054.035-.028.014-.058.023-.084.04-.022.015-.039.034-.06.05a.87.87 0 0 0-.19.194c-.02.028-.041.053-.059.081a1.119 1.119 0 0 0-.076.165c-.009.027-.023.052-.031.079A1.013 1.013 0 0 0 2 7v10c0 .396.232.753.594.914l9 4c.13.058.268.086.406.086a.997.997 0 0 0 .402-.096l.004.01 9-4A.999.999 0 0 0 22 17V7a.999.999 0 0 0-.594-.914zM12 4.095 18.538 7 12 9.905l-1.308-.581L5.463 7 12 4.095zM4 16.351V8.539l7 3.111v7.811l-7-3.11zm9 3.11V11.65l7-3.111v7.812l-7 3.11z"
-                    ></path>
-                  </svg>
-                </div>
-                <h3 class="h5">Product Design</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Nemo cupiditate ab quibusdam quaerat impedit magni. Earum
-                  suscipit ipsum laudantium. Quo delectus est. Maiores voluptas
-                  ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                  Sunt suscipit voluptas ipsa in tempora esse soluta sint
-                  aliquam rhoncus elit.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <div class="list-block__icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-                  >
-                    <path
-                      d="M6 14c-2.206 0-4 1.794-4 4s1.794 4 4 4a4.003 4.003 0 0 0 3.998-3.98H10V16h4v2.039h.004A4.002 4.002 0 0 0 18 22c2.206 0 4-1.794 4-4s-1.794-4-4-4h-2v-4h2c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4v2h-4V5.98h-.002A4.003 4.003 0 0 0 6 2C3.794 2 2 3.794 2 6s1.794 4 4 4h2v4H6zm2 4c0 1.122-.879 2-2 2s-2-.878-2-2 .879-2 2-2h2v2zm10-2c1.121 0 2 .878 2 2s-.879 2-2 2-2-.878-2-2v-2h2zM16 6c0-1.122.879-2 2-2s2 .878 2 2-.879 2-2 2h-2V6zM6 8c-1.121 0-2-.878-2-2s.879-2 2-2 2 .878 2 2v2H6zm4 2h4v4h-4v-4z"
-                    ></path>
-                  </svg>
-                </div>
-                <h3 class="h5">Frontend Development</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Perferendis quia nemo perspiciatis. Et amet aut ut sint quis
-                  culpa quis impedit. Et id eum quae quae ea et. Et sed quae qui
-                  veritatis deserunt. Facilis consequuntur qui aut deleniti.
-                  Autem ipsa ratione dolorum consequuntur. Maxime unde eos
-                  quibusdam maxime excepturi.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <div class="list-block__icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-                  >
-                    <path
-                      d="M20 3H4c-1.103 0-2 .897-2 2v11c0 1.103.897 2 2 2h4l-1.8 2.4 1.6 1.2 2.7-3.6h3l2.7 3.6 1.6-1.2L16 18h4c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2zM4 16V5h16l.001 11H4z"
-                    ></path>
-                    <path d="M6 12h4v2H6z"></path>
-                  </svg>
-                </div>
-                <h3 class="h5">UX Research</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Qui est non similique. Veniam cupiditate sit est dolores nobis
-                  vitae illum. Sunt nulla voluptate sit corporis ullam esse id
-                  minima optio. Perferendis aliquam placeat ratione magni nihil
-                  sed hic aperiam aperiam. Totam nihil molestiae sed et possimus
-                  dolore ipsa omnis aliquid. Ea et mollitia.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <div class="list-block__icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-                  >
-                    <path
-                      d="M5 22h14c1.103 0 2-.897 2-2V9a1 1 0 0 0-1-1h-3V7c0-2.757-2.243-5-5-5S7 4.243 7 7v1H4a1 1 0 0 0-1 1v11c0 1.103.897 2 2 2zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v1H9V7zm-4 3h2v2h2v-2h6v2h2v-2h2l.002 10H5V10z"
-                    ></path>
-                  </svg>
-                </div>
-                <h3 class="h5">E-Commerce</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Quos numquam et ea. Non fuga quidem pariatur. Repellendus
-                  doloremque unde modi aut. Quo cumque porro eum saepe quibusdam
-                  odit eligendi. Doloribus qui sit repellendus cupiditate. Sed
-                  porro magnam dignissimos et facilis animi quis tempora. Rerum
-                  cum molestiae.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <div class="list-block__icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-                  >
-                    <path
-                      d="M21 6c0-1.654-1.346-3-3-3a2.993 2.993 0 0 0-2.815 2h-6.37A2.993 2.993 0 0 0 6 3C4.346 3 3 4.346 3 6c0 1.302.839 2.401 2 2.815v6.369A2.997 2.997 0 0 0 3 18c0 1.654 1.346 3 3 3a2.993 2.993 0 0 0 2.815-2h6.369a2.994 2.994 0 0 0 2.815 2c1.654 0 3-1.346 3-3a2.997 2.997 0 0 0-2-2.816V8.816A2.996 2.996 0 0 0 21 6zm-3-1a1.001 1.001 0 1 1-1 1c0-.551.448-1 1-1zm-2.815 12h-6.37A2.99 2.99 0 0 0 7 15.184V8.816A2.99 2.99 0 0 0 8.815 7h6.369A2.99 2.99 0 0 0 17 8.815v6.369A2.99 2.99 0 0 0 15.185 17zM6 5a1.001 1.001 0 1 1-1 1c0-.551.448-1 1-1zm0 14a1.001 1.001 0 0 1 0-2 1.001 1.001 0 0 1 0 2zm12 0a1.001 1.001 0 0 1 0-2 1.001 1.001 0 0 1 0 2z"
-                    ></path>
-                  </svg>
-                </div>
-                <h3 class="h5">Illustration</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Quasi in nulla maiores minus cupiditate tenetur ut officia
-                  sint. Quis consequatur officiis dolor nulla fuga itaque cum
-                  aut. Ut ut quis omnis dolor. Qui modi voluptatem eum. Minus
-                  numquam consequatur incidunt vel maiores nostrum. Commodi
-                  dignissimos sed laudantium aliquam tempora.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-          </div>
-          <!-- end process-list -->
-        </section>
-        <!-- end s-services -->
 
         <!-- portfolio            ----------------------------------------------- -->
         <section id="folio" class="s-folio target-section">
