Update navigation link and enhance section management: change scroll down link target and adjust section deletion logic to exclude 'services'

--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -132,7 +132,7 @@
           <!-- s-intro__content -->
 
           <div class="s-intro__scroll-down">
-            <a href="#about" class="smoothscroll">
+            <a href="#footer" class="smoothscroll">
               <span>Scroll Down</span>
             </a>
           </div>
