Update link target in index.html: change 'download' to 'services' for improved navigation

--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -110,7 +110,7 @@
 
               <div class="s-intro__content-buttons">
                 <a
-                  href="#download"
+                  href="#services"
                   class="btn btn--stroke s-intro__content-btn smoothscroll"
                   >More About Us</a
                 >
