Add data-bs-focus attribute to modals for improved accessibility

--- a/dashboard/templates/SEODash-main/src/html/sections-page.html
+++ b/dashboard/templates/SEODash-main/src/html/sections-page.html
@@ -369,7 +369,7 @@
 
 
                     <!-- Edit Modal -->
-                    <div class="modal fade" id="editModal{{ section.id }}" tabindex="-1">
+                    <div class="modal fade" id="editModal{{ section.id }}" tabindex="-1" data-bs-focus="false">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -671,7 +671,7 @@
               {% endif %}
 
               <!-- Add New Section Modal -->
-              <div class="modal fade" id="addNewModal" tabindex="-1">
+              <div class="modal fade" id="addNewModal" tabindex="-1" data-bs-focus="false">
                   <div class="modal-dialog modal-lg">
                       <div class="modal-content">
                           <div class="modal-header">
